# palm-20231015

./: .clang-format  .gitignore  .gitmodules  .prettierignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  conanfile.txt  go.work  package.json  third.cmake  vcpkg-configuration.json  vcpkg.json
aloe/: .gitignore  Cargo.toml  Dockerfile  README.md  go.mod  go.sum  main.go
aloe/cmd/: dump.go  mod.go  rpc.go
aloe/dashboard/: .env  package.json
aloe/env/: config.go
aloe/models/: log.go  network.go  user.go
aloe/src/: app.rs  env.rs  graphql.rs  lib.rs  main.rs  orm.rs
aloe/tests/: config_test.rs
bamboo/: CMakeLists.txt  Cargo.toml
bamboo/cpp/: aloe.grpc.pb.cc  aloe.grpc.pb.h  auth.grpc.pb.cc  auth.grpc.pb.h  cms.grpc.pb.cc  cms.grpc.pb.h  ops-router.grpc.pb.cc  ops-router.pb.cc  ops-router.pb.h  rbac.grpc.pb.cc  rbac.grpc.pb.h
bamboo/src/: Gantry5HomeHandler.cpp  Gantry5HomeHandler.h  GravXCorporationHandler.cpp  GravXCorporationHandler.h  HugoCleanWhiteHandler.cpp  HugoCleanWhiteHandler.h  HugoDocsyHandler.cpp  HugoDocsyHandler.h  HugoHinodeHomeHandler.cpp  HugoHinodeHomeHandler.h  HugoUniversalHandler.cpp  HugoUniversalHandler.h  aloe.pb.cc  aloe.pb.h  auth.grpc.pb.cc  auth.pb.cc  cms.grpc.pb.cc  cms.pb.cc  cms.pb.h  lib.rs  ops-router.grpc.pb.h  ops-router.pb.cc  rbac.grpc.pb.cc  rbac.pb.h  tty.rs
cactus/: CMakeLists.txt
cactus/mappers/: auth.xml  rbac.xml
cactus/src/: Log.cpp  Rule.cpp  User.cpp
carnation/carnation/: .gitignore  CMakeLists.txt  build.sh
cbeta/: Cargo.toml  build.rs  cbeta.proto
cbeta/src/: v1.rs
chaos/: .gitignore  CMakeLists.txt  build.sh  envoy.yaml  schema.sh  third.cmake
chaos/apps/: CMakeLists.txt  fig.cpp
chaos/coco/: CMakeLists.txt
chaos/conan/: conanfile.txt  install.sh
chaos/protos/: auth.proto  babel.proto  cbeta.proto  cms.proto  mall.proto  nut.proto  ops.proto  rbac.proto
chaos/scripts/: build.sh  grpc.sh  schema.sh
chaos/src/: CMakeLists.txt  auth.cpp  cache.cpp  courses.cpp  crypto.cpp  fig.cpp  jwt.cpp  mint.cpp  nut.cpp  orm.cpp  queue.cpp  search-engine.cpp  utils.cpp
chaos/tests/: cache.cpp  crypto.cpp  jwt.cpp  orm.cpp  queue.cpp  search-engine.cpp  utils.cpp
cms/: Cargo.toml  build.rs  cms.proto
cms/src/: lib.rs  schema.rs  theme.rs  v1.rs
coco/: Cargo.toml
coco/src/: env.rs  lib.rs  main.rs
coconut/: .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  build.rs  build.sh  go.mod  start.sh
coconut/cmd/: mod.go
coconut/coconut/: CMakeLists.txt  build.sh
coconut/src/: application.cpp  lib.rs  main.cpp  main.rs  mysql.cpp  mysql.rs  nut.cpp  oracle.cpp  oracle.rs  postgresql.cpp  postgresql.rs  rsync.cpp  rsync.rs  web-site.cpp  youtube.rs
ficus/: Cargo.toml  README.md
ficus/src/: lib.rs
fig/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  go.mod  main.go  vcpkg.json
fig/apps/: CMakeLists.txt  aloe.cpp  fig.cpp  mint.cpp  musa.cpp  orchid.cpp
fig/cache/: mod.go
fig/cmd/: http.go  mod.go  rpc.go  worker.go
fig/dashboard/: .env  .env.local  .gitignore  package.json
fig/dashboard-grpc/: .gitignore
fig/env/: casbin.go  config.go  hmac.go  jwt.go  mod.go  postgresql.go  rabbitmq.go
fig/queue/: mod.go
fig/src/: CMakeLists.txt  aloe.cpp  app.rs  cache.cpp  cbeta.cpp  cms.cpp  crypto.cpp  email.cpp  env.rs  fig.cpp  forum.cpp  i18n.cpp  lemon.cpp  lib.rs  main.rs  minio.cpp  mint.cpp  mysql.rs  nut-controllers.cpp  nut-models.cpp  nut-services.cpp  nut-session.cpp  nut.cpp  opensearch.cpp  ops-ddns.cpp  ops-email.cpp  ops-metrics.cpp  ops-router.cpp  ops-vpn.cpp  oracle.rs  orchid.cpp  orm.cpp  postgresql.rs  queue.cpp  rss.cpp  rsync.rs  sitemap.cpp  theme.cpp  twilio.cpp
fig/tests/: CMakeLists.txt  agent_test.rs  aws.cpp  cache.cpp  crypto.cpp  email.cpp  nginx_test.rs  opensearch.cpp  orm.cpp  queue.cpp  rpc.cpp  s3.cpp  theme.cpp  twilio.cpp  utils.cpp
flashcard/: Cargo.toml
flashcard/desktop/: .gitignore  package.json  project.config.json
flashcard/src/: lib.rs  schema.rs
forum/: Cargo.toml  build.rs  forum.proto
forum/src/: lib.rs  schema.rs  v1.rs
gourd/: .gitignore  CMakeLists.txt
gourd/cpp/: auth.pb.h  rbac.grpc.pb.h  rbac.pb.cc
lemon/: .gitignore  CMakeLists.txt  Cargo.toml
lemon/gourd/: CMakeLists.txt
lemon/src/: app.rs  application.cpp  babel.grpc.pb.cc  client-nut.cpp  cms.grpc.pb.cc  cms.grpc.pb.h  cms.pb.cc  cms.pb.h  forum.grpc.pb.cc  forum.grpc.pb.h  forum.pb.cc  i18n.rs  lib.rs  main.cpp  main.rs  nut.grpc.pb.cc  nut.grpc.pb.h  nut.pb.cc  nut.pb.h  ops-email.grpc.pb.cc  ops-email.grpc.pb.h  ops-email.pb.cc  ops-email.pb.h  ops-metrics.grpc.pb.cc  ops-metrics.grpc.pb.h  ops-metrics.pb.cc  ops-metrics.pb.h  ops-router.grpc.pb.cc  ops-router.grpc.pb.h  ops-router.pb.cc  ops-router.pb.h  ops-vpn.grpc.pb.cc  ops-vpn.grpc.pb.h  ops-vpn.pb.cc  theme-clean-white.cpp  theme-docsy.cpp  theme-gantry.cpp  theme-hinode.cpp  theme-universal.cpp  theme-x-corporation.cpp
lemon/templates/: home.html
loquat/: .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  aarch64.cmake  build.sh  loquat.thrift  mac.py  start.sh  vcpkg.json
loquat/cpp/: auth.grpc.pb.cc  auth.grpc.pb.h  auth.pb.cc  auth.pb.h  cms.grpc.pb.cc  cms.grpc.pb.h  cms.pb.cc  cms.pb.h  forum.grpc.pb.cc  forum.grpc.pb.h  forum.pb.cc  forum.pb.h  mall.grpc.pb.cc  mall.grpc.pb.h  mall.pb.cc  mall.pb.h  nut.grpc.pb.cc  nut.grpc.pb.h  nut.pb.cc  nut.pb.h
loquat/gourd/: CMakeLists.txt
loquat/loquat/: .gitignore  CMakeLists.txt  build.sh
loquat/protocols/: CMakeLists.txt
magento/: Cargo.toml
nut/: Cargo.toml  build.rs  nut.proto
nut/src/: env.rs  (+18 more)
orchid/: Cargo.toml  build.rs  orchid.proto
palm/: Cargo.toml  Dockerfile  README.md  build.rs  build.sh  start.sh
src/: CMakeLists.txt  aloe.cpp  auth.cpp  cache.cpp  captcha.rs  cms.cpp  crypt.cpp  crypto.cpp  cscd.cpp  env.rs  erp.cpp  fig.cpp  forum.cpp  i18n.cpp  lemon.cpp  lib.rs  macros.rs  main.rs  mall.cpp  mint.cpp  nut.cpp  ops-mail.cpp  ops-metrics.cpp  ops-router.cpp  orm.cpp  orm.rs  queue.cpp  rabbitmq.cpp  rbac.cpp  result.rs  search.rs  session.cpp  theme.cpp  theme.rs  twilio.cpp
(+4916 files in other folders)
