[profile.release]
lto = true
strip = true

[workspace]

resolver = "2"

members = [
    "palm",
    "bamboo",
    "ficus",
    "nut",

    "cms",
    "forum",
    "courses",
    "erp",
    "crm",
    "mall",
    "chats",
    "cscd",
    "cbeta",
    "flashcard",

    "ops/mail",
    "ops/vpn",
    "ops/metrics",
    "ops/ddns",
    "ops/router",

    "aloe",
    "coconut",
    "fig",
    "orchid",

]
