[package]
name = "aloe"
version = "2022.12.9"
edition = "2021"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
description = "A router software inspired by OpenWrt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10"

[dependencies.tonic]
version = "0.8"
features = ["transport"]

[dependencies.hyper]
version = "0.14"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.diesel]
version = "2"
default-features = false
features = ["sqlite"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.libsqlite3-sys]
version = "0.25"
features = ["bundled"]

[dependencies.palm]
path = '../palm'

[dependencies.ops-router]
path = '../ops/router'
