[package]
name = "aloe"
version = "2023.6.12"
edition = "2021"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
description = "A router software inspired by OpenWrt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10"
data-encoding = "2"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.tonic]
version = "0.10"
features = ["transport"]

[dependencies.hyper]
version = "0.14"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.diesel]
version = "2"
default-features = false
features = ["sqlite"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.libsqlite3-sys]
version = "*"
features = ["bundled"]

[dependencies.palm]
path = '../palm'

[dependencies.ops-router]
path = '../ops/router'
