[package]
name = "cms"
version = "2023.4.24"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.diesel]
version = "2"
default-features = false
features = ["bigdecimal", "postgres", "mysql", "sqlite", "extras", "128-column-tables"]

[dependencies.palm]
path = '../palm'

[dependencies.nut]
path = '../nut'
