[package]
name = "coco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.palm]
path = '../palm'

[dependencies.forum]
path = '../forum'

[dependencies.courses]
path = '../courses'

[dependencies.mall]
path = '../mall'

[dependencies.chats]
path = '../chats'

[dependencies.ops-mail]
path = '../ops/mail'

[dependencies.ops-vpn]
path = '../ops/vpn'

[dependencies.ops-ddns]
path = '../ops/ddns'

[dependencies.ops-metrics]
path = '../ops/metrics'
