[package]
name = "coconut"
version = "2022.11.22"
edition = "2021"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
description = "A backup tool."
homepage = "https://github.com/saturn-xiv/palm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
log = "0.4"
env_logger = "0.9"
postgres = "0.19"
dirs = "4"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.mysql]
version = "23"
# default-features = false
# features = ["default-rustls"]

[dependencies.openssl]
version = "*"
features = ["vendored"]

[dependencies.libz-sys]
version = "*"
default-features = false
features = ["libc"]

[dependencies.palm]
path = '../palm'
