[package]
name = "coconut"
version = "2023.5.23"
edition = "2021"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
description = "An ops tool."
homepage = "https://github.com/saturn-xiv/palm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
postgres = "0.19"
dirs = "5"


[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.mysql]
version = "23" # FIXME no `Flags` in the root

[dependencies.openssl]
version = "*"
features = ["vendored"]

[dependencies.libz-sys]
version = "*"
default-features = false
features = ["libc"]

[dependencies.palm]
path = '../palm'
