[package]
name = "ficus"
version = "2023.9.3"
edition = "2021"
description = "Third parties database schemas."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.diesel]
version = "2"
default-features = false
features = ["bigdecimal", "mysql", "extras", "128-column-tables"]
