[package]
name = "ficus"
version = "2023.9.3"
edition = "2021"
description = "Third parties applications' support."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
log = "0.4"
env_logger = "0.10"

[dependencies.reqwest]
version = "0.11"
features = ["json", "cookies"]

[dependencies.hyper]
version = "1"
features = ["full"]

[dependencies.uuid]
version = "1"
features = ["v4", "v5", "serde"]

[dependencies.diesel]
version = "2"
default-features = false
features = ["bigdecimal", "postgres", "mysql", "extras", "128-column-tables"]
