[package]
name = "fig"
version = "2022.10.27"
edition = "2021"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
description = "A crawler for palm system."
homepage = "https://github.com/saturn-xiv/palm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
toml = "0.5"
oracle = "0.5"
env_logger = "0.9"
prost = "0.11"
prost-types = "0.11"
postgres = "0.19"
bytes = "1"
lazy_static = "1"
regex = "1"
serde_json = "1"
opensearch = "2"
dirs = "4"
mysql = "22"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.chrono-tz]
version = "0.7"
features = ["serde"]

[dependencies.tonic]
version = "0.8"
features = ["transport"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.openssl]
version = "*"
features = ["vendored"]

[dependencies.palm]
path = '../palm'
