[package]
name = "fig"
version = "2023.4.23"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper_actix = "0.4"
log = "0.4"
actix-identity = "0.5"
actix-cors = "0.6"
toml = "0.7"
env_logger = "0.10"
askama = "0.12"
juniper = "0.15"
actix-web-lab = "0.19"
data-encoding = "2"
dirs = "5"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.actix-session]
version = "0.7"
features = ["cookie-session", "redis-rs-session"]

[dependencies.tonic]
version = "0.9"
features = ["transport"]

[dependencies.hyper]
version = "0.14"
features = ["full"]

[dependencies.cookie]
version = "0.17"
features = ["secure", "private", "percent-encode"]

[dependencies.nix]
version = "0.26"
features = ["process"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.casbin]
version = "2"
features = ["watcher", "cached"]

[dependencies.diesel]
version = "2"
default-features = false
features = ["bigdecimal", "postgres", "mysql", "sqlite", "extras", "128-column-tables"]

[dependencies.actix-web]
version = "4"
features = ["cookies"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.palm]
path = '../palm'

[dependencies.nut]
path = '../nut'

[dependencies.bamboo]
path = '../bamboo'

[dependencies.cms]
path = '../cms'

[dependencies.forum]
path = '../forum'

[dependencies.flashcard]
path = '../flashcard'
