[package]
name = "flashcard"
version = "2023.6.12"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde_json = "1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.hyper]
version = "0.14"
features = ["full"]

[dependencies.validator]
version = "0.16"
features = ["derive", "phone", "card", "unic"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.diesel]
version = "2"
default-features = false
features = ["bigdecimal", "postgres", "mysql", "sqlite", "extras", "128-column-tables"]

[dependencies.actix-web]
version = "4"
features = ["cookies"]

[dependencies.palm]
path = '../palm'

[dependencies.nut]
path = '../nut'
