[package]
name = "forum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
prost = "0.11"
prost-types = "0.11"

[dependencies.tonic]
version = "0.8"
features = ["transport"]

[dependencies.diesel]
version = "2"
default-features = false
features = ["bigdecimal", "postgres", "mysql", "sqlite", "extras", "128-column-tables"]

[dependencies.palm]
path = '../palm'

[dependencies.auth]
path = '../auth'

[dependencies.cms]
path = '../cms'
