[package]
name = "lemon"
version = "2022.12.3"
edition = "2021"
description = "A open-source static site generator."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
language-tags = "0.3"
log = "0.4"
yaml-rust = "0.4"
env_logger = "0.10"

[dependencies.hyper]
version = "0.14"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.palm]
path = '../palm'
