[package]
name = "lemon"
version = "2023.4.24"
edition = "2021"
description = "A open-source static site generator inspired by Grav."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
yaml-rust = "0.4"
env_logger = "0.10"
askama = "0.12"

[dependencies.chrono]
version = "0.4"
features = ["serde", "std"]

[dependencies.hyper]
version = "0.14"
features = ["full"]

[dependencies.validator]
version = "0.16"
features = ["derive", "phone", "card", "unic"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.palm]
path = '../palm'
